// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Page Template renders the Accessibility section when prop accessibility is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          AccessibilitySection Component with props:{
  "props for": "the Accessibility section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Anatomy section when prop anatomy is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          AnatomySection Component with props:{
  "props for": "the Anatomy section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Behaviors section when prop behaviors is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          BehaviorsSection Component with props:{
  "props for": "the Behaviors section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Compliance section when prop compliance is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          ComplianceSection Component with props:{
  "props for": "the Compliance section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Component API section when prop componentAPI is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          ComponentAPISection Component with props:{
  "props for": "the Component API section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Interactive Demo section when prop interactiveDemo is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          InteractiveDemoSection Component with props:{
  "props for": "the Interactive Demo section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Options section when prop options is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          OptionsSection Component with props:{
  "props for": "the Options section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Related section when prop related is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          RelatedComponentsSection Component with props:{
  "props for": "the Related section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the SEO section when prop seo is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          SEOSection Component with props:{
  "props for": "the SEO section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the States section when prop states is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          StatesSection Component with props:{
  "props for": "the States section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders the Usage section when prop usage is passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          UsageSection Component with props:{
  "props for": "the Usage section"
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component Page Template renders with mandatory props only 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 32px;
  padding-bottom: 48px;
}

<div
    data-comp="layout"
    data-props="{\\"toggleTheme\\":\\"toggle-theme-function\\",\\"themeMode\\":\\"theme-mode\\",\\"path\\":\\"/the-path\\",\\"newPage\\":true}"
  >
    <div
      class="emotion-0"
    >
      <div
        data-comp="NewsKit Grid"
        data-props="{
  \\"lgMargin\\": \\"sizing000\\",
  \\"xsRowGutter\\": \\"sizing000\\"
}"
        data-testid="Grid"
      >
        <div>
          IntroductionSection Component with props:{
  "pageIntroduction": {
    "type": "Component",
    "name": "ComponentName",
    "hero": {
      "src": "/static/component-hero.svg",
      "alt": "component-image"
    },
    "introduction": "Component Introduction"
  },
  "meta": {
    "status": "Supported",
    "introduced": "v0.3",
    "codeUrl": "https://github.com/newscorp-ghfb/ncu-newskit",
    "figmaUrl": "https://github.com/newscorp-ghfb/ncu-newskit"
  }
}
        </div>
        <div>
          OnwardJourneySection Component
        </div>
        <div
          data-comp="NewsKit Cell"
          data-props="{
  \\"xsHidden\\": true,
  \\"smHidden\\": true,
  \\"mdHidden\\": true,
  \\"lgHidden\\": true,
  \\"xlOffset\\": 10,
  \\"xl\\": 2
}"
          data-testid="Cell"
        >
          TableOfContents Component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
